src/CSS/Project.css
div.home-button {
    padding:0.5em;
    background-color: #303556;
    color: white;
    width:3.5em;
}

div.project-desc-wrapper {
    padding:1em;
    display:flex;
    width:100%;
    flex-direction: column;
    overflow-y: auto;
}

div.project-titlecard {
    height: 450px;
    min-height:450px;
    width:100%;
    display:flex;
    overflow-x: scroll;
}

div.titlecard-text {
    padding-right:1em;
    width:33.25em;
    display: flex;
    flex-direction: column;
    flex-grow:1;
}

div.text-title {
    width:100%;
}

div.text-title h2 {
    font-size: 3em;
    font-family: Verdana, Helvetica, sans-serif;
    font-weight: bold;
    color: #3a3a56;
    margin-bottom:0;
    text-shadow: 2px 2px #b1b1b1;
    animation: fadeInTitle ease 1.25s
}

@keyframes fadeInTitle {
    0% {opacity:0}
    100% {opacity:1}
}

div.text-title h4 {
    font-size: 1.5em;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 100;
    color: #b1b1b1;
    margin-top:0;
    margin-bottom:0.25em;
    text-shadow: 0.5px 0.5px #3a3a56;
    animation: fadeInSubtitle ease 2s;
}

div.text-title h5 {
    margin-top: 0;
    font-size:1.1em;
    margin-bottom: 0;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 100;
    color: #9a9191;
    text-shadow: 0.5px 0.5px #3a3a56;
    animation: fadeInSubtitle ease 2s;
}

@keyframes fadeInSubtitle {
    0% {opacity:0}
    33% {opacity:0}
    100% {opacity:1}
}

div.text-tools {
    flex-grow:1;
    width:100%;
    overflow-y: auto;
    overflow-x: hidden;
    animation: fadeInTools ease 2.5s
}

@keyframes fadeInTools {
    0% {opacity:0}
    50% {opacity:0}
    100% {opacity:1}
}

div.titlecard-animation {
    height:100%;
    border-left:4px solid #8496b1;
    border-right:4px solid #8496b1;
}

div.titlecard-animation img {
    height:100%;
    width:61.75em;
    animation: fadeInAnimation ease 2.5s
}

@keyframes fadeInAnimation {
    0% {opacity:0}
    50% {opacity:0}
    100% {opacity:1}
}

div.text-tools h2 {
    font-size: 1.5em;
    font-family: Verdana, Helvetica, sans-serif;
    color: #3a3a55;
    margin-top:1em;
    margin-bottom:0;
    text-shadow: 1.5px 1.5px #c1bfbf;
    animation: fadeInSubtitle ease 2s;
}

div.text-tools div.ui.list {
    margin-top: 0.5em;
}

div.text-tools div.ui.list div.item h4 {
    margin-bottom:0.5em;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: 100;
    font-size: 1.3em;
    color: #b1b1b1;
    text-shadow: 0.5px 0.5px #3a3a56;
}

div.text-tools div.ui.list div.item div.list div.item span {
    font-family: Arial, Helvetica, sans-serif;
    color: #a59696;
    text-shadow: 0.5px 0.5px #3a3a56;
}

div.component-tree {
    width:100%;
}

div.component-tree h3 {
    font-size: 2.5em;
    font-family: Verdana, Helvetica, sans-serif;
    font-weight: bold;
    color: #3a3a56;
    margin-bottom:0;
    text-shadow: 2px 2px #b1b1b1;
}

div.tree-container {
    width:95%;
    margin:auto;
}

div.tree-container div.tree-img-container {
    width:65%;
    display:flex;
    padding-bottom: 2em;
    margin-bottom:1em;
    flex-direction:column;
    height:auto;
    margin:auto;
}

div.tree-img-container h4 {
    margin-bottom:0;
    margin-top:0;
    font-weight:bold;
    font-family:Verdana, Geneva, Tahoma, sans-serif;
    font-size:1.4em;
    color: #3a3a56;
    text-shadow: 1px 1px #b1b1b1;
}

div.tree-img-container img {
    width:100%;
    height:auto;
    border-right:3px solid #3939b9;
    border-left:3px solid #3939b9;
}

